# agenteval

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  test_api_key.py
agenteval/: __init__.py  version.py
agenteval/adapters/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py  registry.py
agenteval/benchmarks/: __init__.py  loader.py
agenteval/cli/: __init__.py  main.py
agenteval/cli/commands/: __init__.py  list_cmd.py  run.py  validate.py
agenteval/config/: __init__.py  settings.py
agenteval/executors/: __init__.py  base.py  parallel.py  sequential.py
agenteval/metrics/: __init__.py  base.py
agenteval/metrics/efficiency/: __init__.py  execution_time.py  token_usage.py
agenteval/metrics/quality/: __init__.py  accuracy.py
agenteval/metrics/safety/: __init__.py  instruction_following.py
agenteval/metrics/success/: __init__.py  completion_rate.py
agenteval/reporters/: __init__.py  base.py  console.py  json_reporter.py
agenteval/schemas/: __init__.py  benchmark.py  execution.py  metrics.py
benchmarks/reasoning/: simple_math.yaml  suite.yaml  word_problem.yaml
examples/: quickstart.py  run_benchmark.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_adapters.py  test_benchmarks.py  test_metrics.py  test_reporters.py
